ARROW-13341: [C++][Compute] Fix race condition in ScalarAggregateNode

Multiple threads starting DoConsume would already have incremented `num_received_`, so if one were delayed another might erroneously begin to merge/finalize (leaving invalidated states)

Closes #10720 from bkietz/13341-Segfault-in-arrow-compute

Authored-by: Benjamin Kietzman <bengilgit@gmail.com>
Signed-off-by: Benjamin Kietzman <bengilgit@gmail.com>